[package]
name = "ak-inflate2-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
futures = { version = "0.3.30", features = ["executor"] }

[dependencies.ak-inflate2]
path = ".."


[[bin]]
name = "zlib"
path = "fuzz_targets/zlib.rs"
test = false
doc = false
bench = false
